# Zuu-Crew-AEEB

miniproject00/: .env.example  .gitignore  pyproject.toml  readme.md
miniproject00/config/: config.yaml  models.yaml
miniproject00/data/: incidents.txt  news_feed.txt  sample_messages.txt  scenarios.txt  synthesized_for_part4.txt
miniproject00/notebooks/: part0_verification.ipynb  part1_contract_few_shot.ipynb  part2_stability_experiment.ipynb  part3_logi_comm.ipynb  part4_the_budget_keeper.ipynb  part5_news_feed_ext.ipynb
miniproject00/utils/: config_loader.py  llm_client.py  prompts.py  router.py  token_utils.py
miniproject01/: .env.example  .gitignore  README.md  pyproject.toml
miniproject01/notebooks/: 01_data_factory.ipynb  02_finetuning_intern.ipynb  03_rag_librarian.ipynb  04_evaluation_arena.ipynb
miniproject01/src/config/: config.yaml  prompts.yaml
miniproject01/src/services/: data_manager.py  llm_services.py
miniproject01/utils/: hallucination_finder.py  submission_checker.py
miniproject02/: .env.example  .gitignore  Dockerfile  Makefile  README.md  ci.yml  deploy.sh  docker-compose.yml  pyproject.toml  pytest.ini
miniproject02/config/: config.yaml  faqs.yaml  models.yaml
miniproject02/data/evaluation/: cag_stats.json  chunking_comparison.csv  cost_analysis.json  crag_impact.csv
miniproject02/notebooks/: 01_crawl_primelands.ipynb  02_the_chunking_lab.ipynb  03_intelligence_layers.ipynb  04_performance_arena.ipynb
miniproject02/src/context_engineering/: __init__.py  config.py
miniproject02/src/context_engineering/application/: __init__.py
miniproject02/src/context_engineering/domain/: __init__.py  models.py  utils.py
miniproject02/tests/: conftest.py  test_chunkers.py  test_crawler.py  test_integration.py  test_services.py  test_vector_store.py
miniproject03_V1/: pyproject.toml
miniproject03_V1/agents/: logistics_agent.py  preference_agent.py  reflection_loop.py  router.py
miniproject03_V1/config/: params.yaml
miniproject03_V1/data/: logistics_policy.txt  profiles.json
miniproject03_V1/memory/: vector_db.py
miniproject03_V1/notebooks/: 01_the_playwright_crawler.ipynb  02_cognitive_memory_lab.ipynb  03_specialist_orchestration_04_the_reflection_loop.ipynb
miniproject03_V1/scraper/: clean_and_patch.py
miniproject03_V1/tests/: test_catalog_agent.py  test_preference_agent.py
miniproject03_V1/ui/: app.py
miniproject03_V1/utils/: config.py
(+45 files in other folders)
