[project]
name = "miniproject02"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
    "langchain>=1.2.9",
    "langchain-cohere>=0.5.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.0",
    "langchain-openai>=1.1.8",
    "langchain-qdrant>=1.1.0",
    "langchain-text-splitters>=1.1.0",
    "markdownify>=1.2.2",
    "nest-asyncio>=1.6.0",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "playwright>=1.58.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-timeout>=2.4.0",
    "python-dotenv>=1.2.1",
    "pyyaml>=6.0.3",
    "qdrant-client>=1.16.2",
    "sentence-transformers>=5.2.2",
    "tiktoken>=0.12.0",
]
